--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ motor==3.3.2
 pymongo==4.6.0
 
 # Kafka
-aiokafka==0.8.11
+aiokafka==0.12.0
 
 # Testing
 pytest==7.4.3
@@ -24,6 +24,8 @@ httpx==0.25.2
 # Logging and Monitoring
 structlog==23.2.0
 prometheus-client==0.19.0
+pydantic-settings
+
 
 # Development
 black==23.11.0
@@ -38,4 +40,4 @@ python-dotenv==1.0.0
 python-dateutil==2.8.2
 
 # Utilities
-typing-extensions==4.8.0
+typing-extensions>=4.8.0
